--- a/index.html
+++ b/index.html
@@ -1,5 +1,33 @@
 <html>
+    <head>
+        <title>Dylan Strohschein - Graphics</title>
+        <link rel="stylesheet" href="styles.css"/>
+        <script src="main.js"></script>
+    </head>
     <body>
-        <a href="triangle/index.html">Triangles</a>
+        <canvas></canvas>
+        <h1 id="title">&nbsp;</h1>
+        <div class="cards">
+            <a class="card" href="labs/triangle/index.html">
+                <label>
+                    Triangles
+                </label>
+            </a>
+            <a class="card" href="labs/lab1/gasket1-strohschein.html">
+                <label>
+                    Lab1
+                </label>
+            </a>
+            <a class="card" href="labs/triangle/index.html">
+                <label>
+                    Triangles
+                </label>
+            </a>
+            <a class="card" href="labs/lab1/gasket1-strohschein.html">
+                <label>
+                    Lab1
+                </label>
+            </a>
+        </div>
     </body>
 </html>
