--- a/index.html
+++ b/index.html
@@ -3,31 +3,27 @@
         <title>Dylan Strohschein - Graphics</title>
         <link rel="stylesheet" href="styles.css"/>
         <script src="main.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     </head>
-    <body>
+    <body class="container">
         <canvas></canvas>
         <h1 id="title">&nbsp;</h1>
-        <div class="cards">
-            <a class="card" href="labs/triangle/index.html">
-                <label>
-                    Triangles
-                </label>
-            </a>
-            <a class="card" href="labs/lab1/gasket1-strohschein.html">
-                <label>
-                    Lab1
-                </label>
-            </a>
-            <a class="card" href="labs/triangle/index.html">
-                <label>
-                    Triangles
-                </label>
-            </a>
-            <a class="card" href="labs/lab1/gasket1-strohschein.html">
-                <label>
-                    Lab1
-                </label>
-            </a>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                <a class="card w-100" href="labs/triangle/index.html">
+                    <div class="card-header">
+                        Triangles
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                <a class="card w-100" href="labs/lab1/gasket1-strohschein.html">
+                    <div class="card-header">
+                        Lab1
+                    </div>
+                </a>
+            </div>
         </div>
+        
     </body>
 </html>
