--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
 <html>
     <head>
         <title>Dylan Strohschein - Graphics</title>
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="styles.css" />
         <script src="main.js"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+            crossorigin="anonymous" />
     </head>
-    <body class="container">
-        <canvas></canvas>
-        <h1 id="title">&nbsp;</h1>
-        <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 g-3">
-                <a class="card w-100" href="labs/triangle/index.html">
-                    <div class="card-header">
-                        Triangles
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 g-3">
-                <a class="card w-100" href="labs/lab1/gasket1-strohschein.html">
-                    <div class="card-header">
-                        Lab1
-                    </div>
-                </a>
+    <body>
+        <nav class="navbar navbar-light bg-light">
+            <a id="title" class="navbar-brand" href="#">&nbsp;</a>
+        </nav>
+        <div class="container">
+            <h3 class="text-center pt-4">Graphics Projects</h3>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                    <a class="card w-100" href="labs/triangle/index.html">
+                        <div class="card-header">Triangles</div>
+                        <div class="card-body">
+                            <iframe scrolling="no" title="triangle" src="./labs/triangle/index.html"></iframe>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                    <a class="card w-100"
+                        href="labs/lab1/gasket1-strohschein.html">
+                        <div class="card-header">Lab1</div>
+                        <div class="card-body">
+                            <iframe scrolling="no" title="lab1" src="./labs/lab1/gasket1-strohschein.html"></iframe>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
-        
     </body>
 </html>
