--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Dylan Strohschein - Graphics</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css" />
         <script src="main.js"></script>
         <link
@@ -13,8 +14,8 @@
         <nav class="navbar navbar-light bg-light">
             <a id="title" class="navbar-brand" href="#">&nbsp;</a>
         </nav>
-        <div class="container">
-            <h3 class="text-center pt-4">Graphics Projects</h3>
+        <div class="container py-5">
+            <h3 class="text-center">Graphics Projects</h3>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6 col-sm-12 g-3">
                     <a class="card w-100" href="labs/triangle/index.html">
