messing with triangle

--- a/labs/triangleColors/index.html
+++ b/labs/triangleColors/index.html
@@ -6,7 +6,6 @@
 
       attribute vec4 vColor;
       varying vec4 fColor;
-      
 
       void main() { 
         gl_Position = vPosition;
@@ -17,10 +16,9 @@
     <script id="fragment-shader" type="x-shader/x-fragment">
       precision mediump float; 
       varying vec4 fColor;
-      uniform float time;
 
       void main() {
-        gl_FragColor = vec4(1.0 - time, time, 1, 1);
+        gl_FragColor = fColor;
       }
     </script>
 
