--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                    <a class="card w-100"
+                        href="labs/assignment3/index.html">
+                        <div class="card-header">Assignment 3</div>
+                        <div class="card-body">
+                            <iframe scrolling="no" title="lab1" src="./labs/assignment3/index.html"></iframe>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
