--- a/index.html
+++ b/index.html
@@ -43,6 +43,42 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                    <a class="card w-100"
+                        href="labs/lab2/gasket-extended.html">
+                        <div class="card-header">Lab2 - Gasket Extended</div>
+                        <div class="card-body">
+                            <iframe scrolling="no" title="lab1" src="./labs/lab2/gasket-extended.html"></iframe>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                    <a class="card w-100"
+                        href="labs/lab2/sierpinski-click.html">
+                        <div class="card-header">Lab2 - Sierpinski Click</div>
+                        <div class="card-body">
+                            <iframe scrolling="no" title="lab1" src="./labs/lab2/sierpinski-click.html"></iframe>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                    <a class="card w-100"
+                        href="labs/lab2/triangle-anim.html">
+                        <div class="card-header">Lab2 - Triangle Anim</div>
+                        <div class="card-body">
+                            <iframe scrolling="no" title="lab1" src="./labs/lab2/triangle-anim.html"></iframe>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                    <a class="card w-100"
+                        href="labs/lab2/triangle-rotate.html">
+                        <div class="card-header">Lab2 - Triangle Rotate</div>
+                        <div class="card-body">
+                            <iframe scrolling="no" title="lab1" src="./labs/lab2/triangle-rotate.html"></iframe>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
