--- a/labs/triangle/index.html
+++ b/labs/triangle/index.html
@@ -1,43 +1,36 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <!-- define our shaders! -->
-    <script id="vertex-shader" type="x-shader/x-vertex">
-      attribute vec4 vPosition;
 
-      attribute vec4 vColor;
-      varying vec4 fColor;
-      
+<head>
+  <meta charset="utf-8">
+  <!-- Define our shaders -->
+  <script id="vertex-shader" type="x-shader/x-vertex">
+attribute vec4 vPosition;
 
-      void main() { 
-        gl_Position = vPosition;
-        fColor = vColor;
-      }
-    </script>
-  
-    <script id="fragment-shader" type="x-shader/x-fragment">
-      precision mediump float; 
-      varying vec4 fColor;
-      uniform float time;
+void main() {
+  gl_Position = vPosition;
+}
+</script>
+  <script id="fragment-shader" type="x-shader/x-fragment">
+precision mediump float;
 
-      void main() {
-        gl_FragColor = vec4(1.0 - time, time, 1, 1);
-      }
-    </script>
+void main() {
+  gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+}
+</script>
 
-    <!-- include our libraries for WebGL -->
-    <script src="../Common/webgl-utils.js"></script>
-    <script src="../Common/initShaders.js"></script>
-    <script src="../Common/MV.js"></script>
-    
-    <!-- the ACTUAL triangle code!! -->
-    <script src="triangle.js"></script>
+  <script src="../Common/webgl-utils.js"></script>
+  <script src="../Common/initShaders.js"></script>
+  <script src="../Common/MV.js"></script>
 
-  </head>
-  
+  <script src="triangle.js"></script>
 
-  <body>
-    <canvas id="gl-canvas" width="640" height="480">
-      Your browser doesn't support HTML5!
-    </canvas>     
-  </body>
+</head>
+
+<body>
+  <canvas id="gl-canvas" width="640" height="480">
+    Your browser doesn't support HTML5!
+  </canvas>
+</body>
+
 </html>
