--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                    <a class="card w-100"
+                        href="labs/lab3/lab3-points.html">
+                        <div class="card-header">Lab3</div>
+                        <div class="card-body">
+                            <iframe scrolling="no" title="lab3" src="./labs/lab3/lab3-points.html"></iframe>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
