--- a/labs/lab4/3d/index.html
+++ b/labs/lab4/3d/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <script type="module" src="index.js"></script>
+        <H1 id="warningText" style="text-align: center;">Don't Click The Button</H1>
+        <button id="theButton" style="height: 100px; width: 300px; font-size: large; margin: 0 auto; display: block;">CLICK ME!! 👈</button>
+        <video id="video" playsinline webkit-playsinline loop width="320" height="240" style="display: none;" src="./models/video.mp4"></video>
     </body>
 </html>
