--- a/index.html
+++ b/index.html
@@ -88,6 +88,24 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                    <a class="card w-100"
+                        href="labs/lab4/2d/index.html">
+                        <div class="card-header">Lab4 - 2D Pixi</div>
+                        <div class="card-body">
+                            <iframe scrolling="no" title="lab3" src="./labs/lab4/2d/index.html"></iframe>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 g-3">
+                    <a class="card w-100"
+                        href="labs/lab4/3d/index.html">
+                        <div class="card-header">Lab4 - 3D ThreeJs</div>
+                        <div class="card-body">
+                            <iframe scrolling="no" title="lab3" src="./labs/lab4/3d/index.html"></iframe>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
